# filter-apartments

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: main.py
deployment/helm/filter-apartments/: Chart.yaml  values.yaml  values_example.yaml
deployment/helm/filter-apartments/templates/: NOTES.txt  _helpers.tpl  db-deployment.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  session-pvc.yaml
deployment/helm/filter-apartments/templates/tests/: test-connection.yaml
