[tool.poetry]
name = "telegram-advert-bot"
version = "0.1.0"
description = "A bot to fetch, process, and filter apartment adverts from a Telegram channel."
authors = ["Your Name <registeronsite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "*"
telethon = "*"
sqlalchemy = "*"
python-dotenv = "*"
playwright = "*"
pytz = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"