[project]
name = "filterappartments"
version = "0.1.0"
description = "Filter apartments by specific criteria and send the results to a Telegram chat."
authors = [
    { name = "Andrey", email = "registeronsite@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "telethon>=1.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "playwright>=1.0",
    "pytz>=2024.1",
    "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
